--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
